--- a/templates/todo/checklist.html
+++ b/templates/todo/checklist.html
@@ -80,7 +80,52 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
-<br>
+
+<div class="containerfluid">
+  <div class="row">
+    <div class="col-12">
+      <br>
+      <br>
+      <center class="row">
+        <h1><i>__TODO LIST__</i></h1>
+        <hr />
+        {% for item in items %}
+        <h3> Remaining spoons: {{item.remaining_spoons}}</h3>
+      </center>
+      
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-9 col-sm-12">
+      <div class="card">
+        <center><b>{{item.title}}</b></center>
+        <hr/>
+        {{item.date}}
+        <hr/>
+        {{item.details}}
+        <hr/>
+       <p> Spoons required: {{item.spoons_required}}</p>
+        <br />
+        <br />
+        <form action="/del/{{i.id}}" method="POST" style=" padding-right: 4%; padding-bottom: 3%;">
+          {% csrf_token %}
+          <button value="remove" type="submit"  class="btn btn-primary" style="float: right;"><span class="glyphicon glyphicon-trash"></span>   remove</button>
+        </form>
+      </div>
+      {% endfor%}
+    </div>
+    <div class="col-md-3 col-sm-12"> 
+      <div  class="submit_form">
+        <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <center>
+          <input type="submit" class="btn btn-default" value="submit" />
+        </center>
+      </form></div>
+  </div>
+</div>
+
 
 {% if messages %}
 {% for message in messages %}
@@ -91,54 +136,7 @@
 {% endif %}
  <br>
  <br>
-<center class="row">
-  <h1><i>__TODO LIST__</i></h1>
-  <hr />
-  {% for item in items %}
-  <h3> Remaining spoons: {{item.remaining_spoons}}</h3>
-</center>
 
-<div class="row">
-
-  <div class="col-md-8">
-
-   
-    <div class="card">
-      <center><b>{{item.title}}</b></center>
-      <hr/>
-      {{item.date}}
-      <hr/>
-      {{item.details}}
-      <hr/>
-     <p> Spoons required: {{item.spoons_required}}</p>
-      <br />
-      <br />
-      <form action="/del/{{i.id}}" method="POST" style=" padding-right: 4%; padding-bottom: 3%;">
-        {% csrf_token %}
-        <button value="remove" type="submit"  class="btn btn-primary" style="float: right;"><span class="glyphicon glyphicon-trash"></span>   remove</button>
-      </form>
-    </div>
-    {% endfor%}
-  </div>
-  <div class="col-md-1"> </div>
-  <div class="col-md-3" >
-    <div  class="submit_form">
-      <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <center>
-          <input type="submit" class="btn btn-default" value="submit" />
-        </center>
-      </form>
-  </div>
-
-
-
-  {% for item in items %}
-
-  {{ item.title }}
-
-  {% endfor %}
 
 
 </div>
