--- a/templates/todo/index.html
+++ b/templates/todo/index.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% load static %}
-{% load crispy_forms_tags %}
 {% block content %}
 
 <br>
@@ -75,3 +74,4 @@
   </div>
  
 </div>
+{% endblock %}
