--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,28 +1,27 @@
 {% extends "base.html" %}
-{% load allauth i18n %}
-{% block head_title %}
-    {% trans "Signup" %}
-{% endblock head_title %}
+
+{% load i18n %}
+
+{% block head_title %}{% trans "Signup" %}{% endblock head_title %}
+
 {% block content %}
-<br>
-<br>
-<br>
-{% if messages %}
-{% for message in messages %}
-<div class="alert alert-info">
-  <strong>{{ message }}</strong>
-</div>
-{% endfor %}
-{% endif %}
-<br>
+<div class="loginscreen">
+    <br>
+    <br>
+    <br>
+  <div class="loginbox" id="signupbox">
     <h1>{% trans "Sign Up" %}</h1>
-    <p>{% blocktranslate %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktranslate %}</p>
-    
-    <!-- Form rendering starts here -->
-    <form method="post" action="{% url 'account_signup' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">{% trans "Sign up" %}</button>
+
+    <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %} </p>
+
+    <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+      {% csrf_token %}
+      {{ form.as_p }}
+      {% if redirect_field_value %}
+      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" >
+      {% endif %}
+      <button type="submit">{% trans "Sign Up" %} &raquo;</button>
     </form>
-    <!-- Form rendering ends here -->
+  </div>
+</div>
 {% endblock content %}
