--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,7 +5,10 @@
 {% block head_title %}{% trans "Signup" %}{% endblock head_title %}
 
 {% block content %}
-<div class="loginscreen">
+<br>
+<br>
+<br>
+<div class="loginscreen card">
     <br>
     <br>
     <br>
