--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,9 +6,11 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
-
-<div class="container">
-    <div class="row">
+<br>
+<br>
+<br>
+<div class="container card">
+    <div class="row ">
         <div class="col-md-8 mt-3 offset-md-2">
             <h3>{% trans "Sign In" %}</h3>
 
