--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,8 +5,11 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
+<br>
+<br>
+<br>
+<div class="container card">
+    <div class="row ">
         <div class="col-md-8 mt-3 offset-md-2">
             <h3>{% trans "Sign Out" %}</h3>
 
