--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
   <title>{{title}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/29ef0a5efd.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    <!--style-->
@@ -65,7 +65,7 @@
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">Brand</a>
+        <a class="navbar-brand" href="/">Spoons<i class="fa-solid fa-spoon"></i></a>
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
@@ -107,7 +107,7 @@
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <a class="navbar-brand" href="/index">© Brand</a>
+        <a class="navbar-brand" href="/index">© Spoons<i class="fa-solid fa-spoon"></i></a>
 
         <ul class="nav navbar-nav footer">
           <li>
