--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,8 @@
    <style>
     * {
     padding: 0;
-    margin: 0;
+    margin:0;
+    text-align: center;
     box-sizing: border-box;
     }
     .card {
@@ -36,8 +37,8 @@
      resize: both;
      text-overflow: ellipsis;
      text-align: center;
-     max-width: 90%;
-     margin-left: 5%;
+     max-width: 70vw;
+     margin-left: 30px;
     }
     .card:hover{
       background: lightblue;
